# danceinterpreter-rs

./: .gitignore  .prekignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  prek.toml  rust-danceinterpreter-rs.spec  statics.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo-check.yml  codeql.yml  pages.yml  publish-crate.yml  publish-flatpak.yml  publish.yml  release.yml
build-aux/: cargo-sources.json  de.klassenserver7b.danceinterpreter-rs.desktop  de.klassenserver7b.danceinterpreter-rs.json  de.klassenserver7b.danceinterpreter-rs.metainfo.xml  io.github.klassenserver7b.danceinterpreter-rs.metainfo.xml
src/: async_utils.rs  main.rs
src/dataloading/: id3tagreader.rs  songinfo.rs
src/dataloading/dataprovider/: song_data_provider.rs
src/traktor_api/: data_provider.rs  mod.rs  model.rs  server.rs
src/ui/: config_window.rs  mod.rs  song_window.rs
src/ui/config_window/: bottombar.rs  mod.rs  sidebar.rs  top_bar.rs
src/ui/widget/: canvas_toggle.rs  dynamic_text_input.rs  mod.rs  power_button.rs  restart_button.rs  suggestion_text_input.rs
traktor-api/: test_server.js
traktor-api/Api/: ApiChannel.qml  ApiClient.js  ApiDeck.qml  ApiMixer.qml  ApiModule.qml  ApiState.qml  qmldir
traktor-api/cover-loader/: .prettierrc  README.md  build.sh  index.ts  package.json  translate.sh  tsconfig.json
