[package]
name = "danceinterpreter-rs"
description = "Danceinterpreter in Rust"
license = "GPL-3.0-or-later"
version = "0.7.0"
edition = "2024"
authors = ["Klassenserver7b <klassenserver7bwin10@gmail.com>", "Konsl <82901383+Konsl@users.noreply.github.com>, Robocraft999 <59525378+Robocraft999@users.noreply.github.com>"]

[dependencies]
id3 = "1.16"
url = "2.5"
percent-encoding = "2.3"
iced = { version = "0.14.0", features = ["linux-theme-detection", "image", "debug", "wayland", "svg", "lazy", "canvas", "tokio", "advanced"] }
iced_aw = { version = "0.13.1", features = ["default"] }
#iced_anim = { version = "0.3.1", features = ["derive", "widgets"] }
rfd = "0.17"
dirs = "6.0"
warp = { version = "0.4", features = ["websocket", "server"] }
tokio = "1.52"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.22", features = ["v4"] }
bytes = "1.11"
network-interface = "2.0"
libmdns = { version = "0.10", optional = true }
image = "0.25"

[dev-dependencies]
warp = { version = "0.4", features = ["websocket", "server", "test"] }
tokio-tungstenite = "0.29"
serde_json = "1.0.149"
reqwest = { version = "0.13", features = ["json"] }
futures-util = "0.3"


[features]
default = ["mdns"]
debug = ["iced/hot"]
mdns = ["dep:libmdns"]
